--- a/update_items.html
+++ b/update_items.html
@@ -14,7 +14,26 @@
 
 </head>
 <body style="background:url('dot.jpeg')">
-	
+	<section style="padding: 210px 570px;">
+	  <div class="card" style="width: 400px; border: 5px solid #2E3F61; border-radius: 15px;">
+	  <div class="card-body">
+	    <h5 class="class-title" style="color: #2E3F61; font-family: 'Oswald', sans-serif; font-size: 35px" ><img src="logo eshika.png" style="width: 15%; height: 15%; padding-top: 0px; padding-bottom: 18px;"> Check Book Buy</h5>
+	    <p class="card-text">
+	    	<p>Select the Item Name</p>
+			<input type=name name="" id="" placeholder="Item name"/>
+			<p></p>
+			<p>Enter the quantity of the item in kg/L/packets</p>
+			<input type="number" name="" placeholder="Quantity"/>
+		</p>
+	  </div>
+	  <div class="row d-flex justify-content-center" style="padding-bottom: 25px;">
+			   	<div style="padding-right: 20px;">
+			    	<a class="btn btn-success" href="shopkeeper_dashboard.html" style="padding:15px 30px; font-size: 20px; ">Back</a>
+				</div>
+			    <a class="btn btn-success btn-lg" href="shopkeeper_dashboard.html" style="padding:15px 20px 5px 20px;">Confirm</a>
+	</div>
+	</div>
+	</section>
 	<!-- Js -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
