--- a/view_items.html
+++ b/view_items.html
@@ -14,7 +14,29 @@
 
 </head>
 <body style="background:url('dot.jpeg')">
-	
+	<section style="padding: 210px 570px;">
+	  <div class="card" style="width: 400px; border: 5px solid #2E3F61; border-radius: 15px;">
+	  <div class="card-body">
+	    <h5 class="class-title" style="color: #2E3F61; font-family: 'Oswald', sans-serif; font-size: 35px" ><img src="logo eshika.png" style="width: 15%; height: 15%; padding-top: 0px; padding-bottom: 18px;"> Check Book Buy</h5>
+	    <p class="card-text">
+	    	<p>Select your Area</p>
+			<input type=name name="" id="" placeholder="Area"/>
+			<p></p>
+			<p>Select the shop you want to check for</p>
+			<input type="name" name="" placeholder="Shop Name"/>
+		</p>
+	  </div>
+	  <div class="row d-flex justify-content-center" style="padding-bottom: 25px;">
+			   	<div style="padding-right: 20px;">
+			    	<a class="btn btn-success" href="customer_dashboard.html" style="font-size: 20px; ">Back</a>
+				</div>
+				<div style="padding-right: 20px;">
+			    	<a class="btn btn-success" href="#" style="font-size: 20px; ">View Items</a>
+				</div>
+			    <a class="btn btn-success" href="book_slot.html" style="font-size: 20px;">Book slot</a>
+	</div>
+	</div>
+	</section>
 	<!-- Js -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
