--- a/customer_dashboard.html
+++ b/customer_dashboard.html
@@ -15,7 +15,58 @@
 
 </head>
 <body>
-	
+	<!-- Nav -->
+	<nav class="navbar navbar-expand-lg navbar-dark " style="line-height: 50px; position: fixed; width: 100%; background-color: #2E3F61; z-index: 10">
+	  <a class="navbar-brand" style="color: white; font-family: 'Oswald', sans-serif; font-size: 35px" ><img src="logo eshika.png" style="width: 15%; height: 15%; padding-top: 0px; padding-bottom: 18px;"> Check Book Buy</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup text-light">
+	    <div class="navbar-nav ml-auto" style="padding-right: 25px;">
+	      <button type="button" class="btn mx-2" id="our">
+	      <a class="nav-item nav-link active" href="Landingpage.html" style="font-family: 'Oswald', sans-serif; font-size: 20px;">  Home  <span class="sr-only">(current)</span></a>
+	      </button>
+	      <button type="button" class="btn mx-2" id="our">
+	      <a class="nav-item nav-link" style="font-family: 'Oswald', sans-serif; font-size: 20px">Preview</a>
+	  	  </button>
+	      <button type="button" class="btn mx-2" id="our">
+	      <a class="nav-item nav-link " style="font-family: 'Oswald', sans-serif; font-size: 20px">Log Out</a>
+	  	  </button>
+	    </div>
+	  </div>
+	</nav>
+
+<!-- Cards -->
+<section class="gallery">
+		<div class="container jump">
+			<div class="row">
+				<div class="col-lg-6 mb-3">
+					<div class="card border-our" style="width:400px; align:center;">
+						<img class="card-img-top mx-auto" src="hi.png">
+						<div class="card-body" style="text-align: center;">
+							<h5 class="card-title" style="color: #2E3F61; font-family: Roboto; font-weight: bold; font-size: 35px;">View Items</h5>
+							<p class="card-text">Check the availability of items and book your slot.</p>
+							<a href="view_items.html" class="btn btn-card btn-lg">Let's Go</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-6 mb-3">
+						
+					<div class="card border-our" style="width:400px;">
+						<img class="card-img-top mx-auto" src="he.png">
+						<div class="card-body" style="text-align: center;">
+							<h5 class="card-title" style="color: #2E3F61; font-family: Roboto; font-weight: bold; font-size: 35px;">Create your wishlist.</h5>
+							<p class="card-text">Get your order placed for the next day.</p>
+							<a href="wishlist.html" class="btn btn-card btn-lg">Let's Go</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+</section>
+
+
 	<!-- Js -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
